--- a/templates/includes/card.html
+++ b/templates/includes/card.html
@@ -65,17 +65,30 @@
             <td>Tracking Bug</td>
             <td>
               <a href="https://bugs.chromium.org/p/chromium/issues/detail?id={{api.id}}">{{api.id}}</a>
+              <button class="copy" data-url="https://bugs.chromium.org/p/chromium/issues/detail?id={{api.id}}" aria-label="Copy link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M18 21H4V7H2v14c0 1.1.9 2 2 2h14v-2zm3-4V3c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2zm-2 0H8V3h11v14z"/></svg>
+              </button>
             </td>
           </tr>
           {% if api.ot and api.ot.status == 'ACTIVE' %}
           <tr>
             <td>Origin Trial</td>
-            <td><a href="https://developers.chrome.com/origintrials/#/view_trial/{{api.ot.id}}">Details</a></td>
+            <td><a href="https://developers.chrome.com/origintrials/#/view_trial/{{api.ot.id}}">Details</a>
+              <button class="copy" data-url="https://developers.chrome.com/origintrials/#/view_trial/{{api.ot.id}}" aria-label="Copy link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M18 21H4V7H2v14c0 1.1.9 2 2 2h14v-2zm3-4V3c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2zm-2 0H8V3h11v14z"/></svg>
+              </button>
+            </td>
+            
           </tr>
           {% endif %} {% if api.feature %}
           <tr>
             <td>Chrome Status</td>
-            <td><a class="card--chrome-status" href="https://chromestatus.com/feature/{{api.feature.id}}">Details</a></td>
+            <td><a class="card--chrome-status" href="https://chromestatus.com/feature/{{api.feature.id}}">Details</a>
+              <button class="copy" data-url="https://chromestatus.com/feature/{{api.feature.id}}" aria-label="Copy link">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M18 21H4V7H2v14c0 1.1.9 2 2 2h14v-2zm3-4V3c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2zm-2 0H8V3h11v14z"/></svg>
+            </button>
+          </td>
+            
           </tr>
           {% endif %}
           <tr>
@@ -178,17 +191,29 @@
               <td>Tracking Bug</td>
               <td>
                 <a href="https://bugs.chromium.org/p/chromium/issues/detail?id={{api.id}}">{{api.id}}</a>
+                <button class="copy" data-url="https://bugs.chromium.org/p/chromium/issues/detail?id={{api.id}}" aria-label="Copy link">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M18 21H4V7H2v14c0 1.1.9 2 2 2h14v-2zm3-4V3c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2zm-2 0H8V3h11v14z"/></svg>
+                </button>
+                
               </td>
             </tr>
             {% if api.ot and api.ot.status == 'ACTIVE' %}
             <tr>
               <td>Origin Trial</td>
-              <td><a href="https://developers.chrome.com/origintrials/#/view_trial/{{api.ot.id}}">Details</a></td>
+              <td><a href="https://developers.chrome.com/origintrials/#/view_trial/{{api.ot.id}}">Details</a>
+                <button class="copy" data-url="https://developers.chrome.com/origintrials/#/view_trial/{{api.ot.id}}" aria-label="Copy link">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M18 21H4V7H2v14c0 1.1.9 2 2 2h14v-2zm3-4V3c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2zm-2 0H8V3h11v14z"/></svg>
+                </button>
+              </td>
             </tr>
             {% endif %} {% if api.feature %}
             <tr>
               <td>Chrome Status</td>
-              <td><a class="card--chrome-status" href="https://chromestatus.com/feature/{{api.feature.id}}">Details</a></td>
+              <td><a class="card--chrome-status" href="https://chromestatus.com/feature/{{api.feature.id}}">Details</a>
+                <button class="copy" data-url="https://chromestatus.com/feature/{{api.feature.id}}" aria-label="Copy link">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M18 21H4V7H2v14c0 1.1.9 2 2 2h14v-2zm3-4V3c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2zm-2 0H8V3h11v14z"/></svg>
+                </button>
+              </td>
             </tr>
             {% endif %}
             <tr>
