--- a/views/timeline.html
+++ b/views/timeline.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/card.css" />
     <link rel="stylesheet" href="/css/timeline.css" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <style>
       .timeline-grid {
         grid-template-columns: repeat({{releases | length}}, 25vw);
