--- a/views/timeline.html
+++ b/views/timeline.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="/css/timeline.css" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <style>
+      body {
+        background: hsl(0, 0%, 95%);
+      }
+
       .timeline-grid {
         grid-template-columns: repeat({{releases | length}}, 25vw);
       }
