--- a/css/card.css
+++ b/css/card.css
@@ -2,9 +2,9 @@
   font-family: Roboto, sans-serif;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0, 0, 0, 0.12);
   display: grid;
-  border: 1px solid #e8eaed;
+  border: 1px solid black;
   border-radius: 4px;
-  padding: 1rem;
+  padding: .5rem;
   height: max-content;
   overflow: hidden;
   grid-gap: 0.5rem;
